Resolve #10
Adds proper mobile support using media queries
Also fixes a bhg with post-large where the content would be clipped because of max-height instead of min-height

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,8 @@ body {
   flex-wrap: wrap;
   justify-content: center;
 }
+@media only screen and (max-width: 768px) {
+  .posts {
+    display: block;
+  }
+}
